# 5ch-browser-template

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.json  settings.local.json
.claude/commands/: add-command.md  add-smoke-test.md  debug-5ch.md  explain-crate.md  find-handler.md  migration-check.md  review-diff.md  summarize.md
.claude/rules/: react.md  rust.md
.claude/skills/ci/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/landing/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/probe/: SKILL.md
.claude/skills/smoke/: SKILL.md
.claude/skills/stats/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml  release.yml  sync-upstream.yml
apps/desktop/: package-lock.json  package.json  vite.config.ts
apps/desktop/public/: pip.html
apps/desktop/scripts/: e2e_playwright.mjs  run_e2e.ps1  run_e2e.sh  run_smoke_ui.sh  smoke_ui_playwright.mjs
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  ai-models.json  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  state.rs  types.rs
apps/desktop/src-tauri/src/commands/: auth.rs  board.rs  cache.rs  favorites.rs  image.rs  mod.rs  ng.rs  thread.rs  update.rs  window.rs
apps/desktop/src-tauri/third_party_licenses/vulkan-loader/: ATTRIBUTION.txt
apps/landing/: index.html  package-lock.json  package.json  wrangler.toml
apps/landing/functions/: latest.json.ts  stats.ts
apps/landing/public/: ai-models.json  glass-preview.html  latest.json
apps/landing/src/: App.tsx  styles.css
crates/core-ai/: Cargo.toml
crates/core-ai/src/: lib.rs
crates/core-auth/: Cargo.toml
crates/core-auth/src/: lib.rs
crates/core-fetch/: Cargo.toml
crates/core-fetch/src/: lib.rs
crates/core-parse/src/: lib.rs
crates/core-store/: Cargo.toml
crates/core-store/src/: lib.rs
docs/: 5ch_browser_spec.md  AI_INTEGRATION_PLAN.md  DEPLOYMENT_RUNBOOK.md  DEVELOPER_GUIDE.md  HANDOFF_MAC_AI_BUILD.md  NEXT_SESSION_HANDOVER.md  NEXT_SESSION_PROMPT.md  POST_FLOW_PROBE_2026-03-19.json  PROGRESS_TRACKER.md  RELEASE_RUNBOOK_v0.0.1.md  SESSION_HANDOFF_2026-03-20.md  START_HERE.md  glass-mockup.html  pre_implementation_validation.md
scripts/: build_linux_aarch64_release.sh  build_linux_release.sh  generate_latest_json.py  probe_bbspink_ex0ch.py  probe_bbspink_post_flow.py  probe_post_flow.py  release.sh  release_finish.sh  validate_latest_json.py
