[workspace]
members = [
  "crates/core-auth",
  "crates/core-fetch",
  "crates/core-parse",
  "crates/core-store",
  "apps/desktop/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
