[package]
name = "core-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Backend selection by target OS:
# - macOS: Metal (Apple Silicon GPU)
# - Windows / Linux: Vulkan (vendor-neutral GPU, runtime fallback to CPU via n_gpu_layers=0)
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.146", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1.146", features = ["vulkan"] }
