[package]
name = "ember"
version = "0.0.41"
edition = "2021"

[lib]
name = "ember_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core-auth = { path = "../../../crates/core-auth" }
core-fetch = { path = "../../../crates/core-fetch" }
core-store = { path = "../../../crates/core-store" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
