[package]
name = "ember"
version = "0.0.76"
description = "5ちゃんねる専用ブラウザ"
homepage = "https://ember-5ch.pages.dev"
repository = "https://github.com/kiyohken2000/5ch-browser-template"
edition = "2021"

[lib]
name = "ember_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = { workspace = true }
core-auth = { path = "../../../crates/core-auth" }
core-fetch = { path = "../../../crates/core-fetch" }
core-store = { path = "../../../crates/core-store" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
